@@ -74,6 +74,7 @@ v13.0.00
 		Finance: switched from JS to HTML for fee block placeholders
 		Finance: added option to output name on invoice/receipt as student official name, rather than preferredName+surname
 		Individual Needs: added template settings for pre-filling fields on new IEPs
+		Individual Needs: fixed permission issue on summary page
 		Library: reduced memory usage of Library browse page
 		Markbook: added settings to enable/disable Effort and Rubrics
 		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
